--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="calculator-body">
+      <div id="calculator-screen"></div>
+      <div id="clear-buttons">
+        <button class="button" id="clear">AC</button>
+        <button class="button" id="delete">C</button>
+      </div>
+      <div id="calculator-buttons">
+        <button class="button" id="seven">7</button>
+        <button class="button" id="eight">8</button>
+        <button class="button" id="nine">9</button>
+        <button class="button operator" id="divide">÷</button>
+        <button class="button" id="four">4</button>
+        <button class="button" id="five">5</button>
+        <button class="button" id="six">6</button>
+        <button class="button operator" id="multiply">x</button>
+        <button class="button" id="one">1</button>
+        <button class="button" id="two">2</button>
+        <button class="button" id="three">3</button>
+        <button class="button operator" id="subtract">–</button>
+        <button class="button" id="zero">0</button>
+        <button class="button" id="decimal">.</button>
+        <button class="button operator" id="add">+</button>
+        <button class="button operator" id="equal">=</button>
+      </div>
+    </div>
+  </body>
 </html>
