--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
   </head>
   <body>
     <div id="calculator-body">
-      <div id="calculator-screen"></div>
+      <div id="calculator-screen">
+        <p id="input-numbers">0</p>
+      </div>
       <div id="clear-buttons">
-        <button class="button" id="clear">AC</button>
-        <button class="button" id="delete">C</button>
+        <button class="button delete" id="clear">AC</button>
+        <button class="button delete" id="delete">C</button>
       </div>
       <div id="calculator-buttons">
-        <button class="button" id="seven">7</button>
-        <button class="button" id="eight">8</button>
-        <button class="button" id="nine">9</button>
+        <button class="button num" id="7">7</button>
+        <button class="button num" id="8">8</button>
+        <button class="button num" id="9">9</button>
         <button class="button operator" id="divide">÷</button>
-        <button class="button" id="four">4</button>
-        <button class="button" id="five">5</button>
-        <button class="button" id="six">6</button>
+        <button class="button num" id="4">4</button>
+        <button class="button num" id="5">5</button>
+        <button class="button num" id="6">6</button>
         <button class="button operator" id="multiply">x</button>
-        <button class="button" id="one">1</button>
-        <button class="button" id="two">2</button>
-        <button class="button" id="three">3</button>
+        <button class="button num" id="1">1</button>
+        <button class="button num" id="2">2</button>
+        <button class="button num" id="3">3</button>
         <button class="button operator" id="subtract">–</button>
-        <button class="button" id="zero">0</button>
+        <button class="button num" id="0">0</button>
         <button class="button" id="decimal">.</button>
         <button class="button operator" id="add">+</button>
         <button class="button operator" id="equal">=</button>
